rust/macros/tests/invalid/target/debug/deps/only_arrow-b901719b5de36fd7.d
/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/only_arrow-b901719b5de36fd7.d: only_arrow.rs Cargo.toml

/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/libonly_arrow-b901719b5de36fd7.rmeta: only_arrow.rs Cargo.toml

only_arrow.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
